Working except bttn

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -13,7 +13,7 @@
               de ti mismx mientras te sientes apoyadx en el camino
             </h4>
             <br />
-            <a href="#" class="button-main">¡{{bttnText}}!</a>
+            <a routerLink = "sign" class="nav-link button-main">¡{{bttnText}}!</a>
           </div>
         </div>
         
