--- a/src/app/components/formulary/formulary.component.html
+++ b/src/app/components/formulary/formulary.component.html
@@ -106,7 +106,7 @@
 
     <div class="container mt-sm-5 my-1">
       <div class="question ml-sm-5 pl-sm-5 pt-2">
-        <a href="#" class="btn btn-primary">{{bttnText}}</a>
+        <a routerLink = "user" class="btn btn-primary">{{bttnText}}</a>
       </div>
     </div>
 
