--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     class="navbar navbar-expand-lg navbar-light"
   >
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">{{title}}</a>
+      <a routerLink = "main" class="navbar-brand" href="#">{{title}}</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -19,10 +19,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">{{navbar[0]}}</a>
+            <a routerLink="about" class= "nav-link">{{navbar[0]}}</a> <!-- button 1-->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">{{navbar[1]}}</a>
+            <a routerLink ="resources" class="nav-link" href="#">{{navbar[1]}}</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -37,13 +37,13 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li>
-                <a class="dropdown-item" href="#">{{user[0]}}</a>
+                <a routerLink = 'form' class="dropdown-item" href="#">{{user[0]}}</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#">{{user[1]}}</a>
+                <a routerLink = "doctors" class="dropdown-item" href="#">{{user[1]}}</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#">{{user[2]}}</a>
+                <a routerLink = "user" class="dropdown-item" href="#">{{user[2]}}</a>
               </li>
             </ul>
           </li>
