--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -99,9 +99,9 @@
     font-size: $px20;
     width: $width-80;
   
-    &:hover{
-      background-color: $blue-2;
-    }
+    // &:hover{
+    //   background-color: $blue-2;
+    // }
   }
   
   .container::after,
