--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -26,10 +26,10 @@
 }
 
 .navbar .dropdown-menu {
-  background-color: #6e98b8;
+  background-color: #ffd1dc;
 }
 
 .navbar:hover {
-  background-color: #6e98b8;
+  background-color: #ffd1dc;
 }
 /*# sourceMappingURL=navbar.component.css.map */
