--- a/src/app/components/animation/animation.component.css
+++ b/src/app/components/animation/animation.component.css
@@ -1,1 +1,145 @@
-/* No CSS *//*# sourceMappingURL=animation.component.css.map */
+.title-text {
+  text-align: center;
+  color: black;
+  text-transform: uppercase;
+  padding: 1.5rem 2rem;
+}
+
+.normal-text {
+  text-align: left;
+  color: black;
+  padding: 1.5rem 2rem;
+  font-size: 25px;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.about-section {
+  padding: 50px;
+  text-align: center;
+  background-color: #e3f2fd;
+  color: black;
+}
+
+.resources-section {
+  padding: 50px;
+  text-align: center;
+  background-color: #e3f2fd;
+  color: black;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+.column {
+  float: left;
+  width: 50%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+.card {
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+}
+
+.container {
+  padding: 0 16px;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 15px;
+  color: white;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 12px;
+  background-color: black;
+  width: 100%;
+}
+
+.button:hover {
+  color: white;
+}
+
+.button:hover {
+  background-color: #555;
+}
+
+.button-main {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 15px;
+  color: white;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 12px;
+  background-color: #64bad7;
+  font-size: 20px;
+  width: 80%;
+}
+
+.button-main:hover {
+  color: white;
+}
+
+.button-main:hover {
+  background-color: #ffd1dc;
+}
+
+.container::after,
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: #555;
+}
+
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+
+.signup-section {
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 2%;
+}
+
+.signup-section label {
+  margin-top: 2%;
+}
+
+.userin-section {
+  padding-top: 2%;
+}
+
+.userin-section img {
+  width: 50%;
+}
+
+.resources-section h1 {
+  padding-top: 2%;
+}
+/*# sourceMappingURL=animation.component.css.map */
