--- a/src/app/components/animation/animation.component.html
+++ b/src/app/components/animation/animation.component.html
@@ -1,1 +1,3 @@
-<p>animation works!</p>
+<button type="button" name="button" class="button-main" [@aniBoton]="state" (click)="toggleButton()">
+    {{bttnText}}
+</button>
