--- a/src/app/components/login-button/login-button.component.css
+++ b/src/app/components/login-button/login-button.component.css
@@ -138,4 +138,4 @@ html {
 .resources-section h1 {
   padding-top: 2%;
 }
-/*# sourceMappingURL=main.component.css.map */
+/*# sourceMappingURL=login-button.component.css.map */
