--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -10,6 +10,8 @@
             <h2 class="card-subtitle mb-2 text-muted">{{fields['Name']}}</h2>
             <h2 class="card-title">E-Mail</h2>
             <h2 class="card-subtitle mb-2 text-muted">{{fields['Email']}}</h2>
+            <br>
+            <app-animation></app-animation>
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6">
