Add router to footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,76 +3,90 @@
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-3">
         <small class="d-block mb-3 text-muted d-flex justify-content-center"
-          >&copy; {{currYear}}</small
+          >&copy; {{ currYear }}</small
         >
       </div>
       <div class="col-sm-12 col-md-4 col-lg-3">
-        <h5 class="text-title d-flex justify-content-center">{{elements[0][0]}}</h5>
+        <h5 class="text-title d-flex justify-content-center">
+          {{ elements[0][0] }}
+        </h5>
         <ul class="list-unstyled text-small">
           <li>
             <a
+              routerLink="about"
               class="text-muted d-flex justify-content-center"
               href="#"
-              >{{elements[0][1]}}</a
+              >{{ elements[0][1] }}</a
             >
           </li>
           <li>
             <a
+              routerLink="about"
               class="text-muted d-flex justify-content-center"
               href="#"
-              >{{elements[0][2]}}</a
+              >{{ elements[0][2] }}</a
             >
           </li>
           <li>
             <a
+              routerLink="about"
               class="text-muted d-flex justify-content-center"
               href="#"
-              >{{elements[0][3]}}</a
+              >{{ elements[0][3] }}</a
             >
           </li>
         </ul>
       </div>
       <div class="col-sm-12 col-md-4 col-lg-3">
-        <h5 class="text-title d-flex justify-content-center">{{elements[1][0]}}</h5>
+        <h5 class="text-title d-flex justify-content-center">
+          {{ elements[1][0] }}
+        </h5>
         <ul class="list-unstyled text-small">
           <li>
             <a
+              routerLink="resources"
               class="text-muted d-flex justify-content-center"
               href="#"
-              >{{elements[1][1]}}</a
+              >{{ elements[1][1] }}</a
             >
           </li>
           <li>
             <a
+              routerLink="resources"
               class="text-muted d-flex justify-content-center"
               href="#"
-              >{{elements[1][2]}}</a
+              >{{ elements[1][2] }}</a
             >
           </li>
         </ul>
       </div>
       <div class="col-sm-12 col-md-4 col-lg-3">
-        <h5 class="text-title d-flex justify-content-center">{{elements[2][0]}}</h5>
+        <h5 class="text-title d-flex justify-content-center">
+          {{ elements[2][0] }}
+        </h5>
         <ul class="list-unstyled text-small">
           <li>
             <a
+              routerLink="form"
               class="text-muted d-flex justify-content-center"
               href="#"
-              >{{elements[2][1]}}</a
+              >{{ elements[2][1] }}</a
             >
           </li>
           <li>
             <a
+              routerLink="doctors"
               class="text-muted d-flex justify-content-center"
               href="#"
-              >{{elements[2][2]}}</a
+              >{{ elements[2][2] }}</a
             >
           </li>
           <li>
             <a
+              routerLink="user"
               class="text-muted d-flex justify-content-center"
               href="#"
-              >{{elements[2][3]}}</a
+              >{{ elements[2][3] }}</a
             >
           </li>
         </ul>
