--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -2,7 +2,7 @@
 $dark-text: black;
 $grey: #555;
 $blue-1: #64bad7;
-$blue-2: #ffd1dc;
+$blue-2: #a3f2ff;
 $background-blue: #e3f2fd;
 $white: white;
 
