--- a/src/app/components/login-button/login-button.component.html
+++ b/src/app/components/login-button/login-button.component.html
@@ -1,3 +1,3 @@
 <button type="button" name="button" class="button-main" (click)="loginWithRedirect()">
-    Registrarse
+    {{bttnText}}
 </button>
