Add third API [Maps]

--- a/front/src/app/components/about/about.component.html
+++ b/front/src/app/components/about/about.component.html
@@ -20,7 +20,7 @@
     <div class="row">
       <div class="col-sm-12 col-md-6 col-lg-6">
         <div class="card">
-          <img src="../../../assets/images/dummy.png" alt="Gustavo" style="width: 100%" />
+          <img src="../../../assets/images/gus.jpeg" alt="Gustavo" style="width: 100%" />
           <div class="container">
             <br />
             <h2>{{Gus.Name}}</h2>
@@ -42,7 +42,7 @@
 
       <div class="col-sm-12 col-md-6 col-lg-6">
         <div class="card">
-          <img src="../../../assets/images/dummy.png" alt="Javier" style="width: 100%" />
+          <img src="../../../assets/images/javi.jpeg" alt="Javier" style="width: 100%" />
           <div class="container">
             <br />
             <h2>{{Javi.Name}}</h2>
