--- a/front/src/app/components/doctors/doctors.component.html
+++ b/front/src/app/components/doctors/doctors.component.html
@@ -3,7 +3,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../../../assets/images/doctor.jpg" class="card-img-top" alt="..." />
+          <img src="../../../assets/images/doctor1.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h3 class="card-title">{{doctor1.Name}}</h3>
             <h5 class="card-text">{{doctor1.Specialty}}</h5>
@@ -15,64 +15,65 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../../../assets/images/doctor.jpg" class="card-img-top" alt="..." />
+          <img src="../../../assets/images/doctor2.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h3 class="card-title">{{doctor1.Name}}</h3>
-            <h5 class="card-text">{{doctor1.Specialty}}</h5>
+            <h3 class="card-title">{{doctor2.Name}}</h3>
+            <h5 class="card-text">{{doctor2.Specialty}}</h5>
             <p class="card-text">
-              {{doctor1.Address}}
+              {{doctor2.Address}}
             </p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-         <img src="../../../assets/images/doctor.jpg" class="card-img-top" alt="..." />
+         <img src="../../../assets/images/doctor3.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h3 class="card-title">{{doctor1.Name}}</h3>
-            <h5 class="card-text">{{doctor1.Specialty}}</h5>
+            <h3 class="card-title">{{doctor3.Name}}</h3>
+            <h5 class="card-text">{{doctor3.Specialty}}</h5>
             <p class="card-text">
-              {{doctor1.Address}}
+              {{doctor3.Address}}
             </p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../../../assets/images/doctor.jpg" class="card-img-top" alt="..." />
+          <img src="../../../assets/images/doctor4.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h3 class="card-title">{{doctor1.Name}}</h3>
-            <h5 class="card-text">{{doctor1.Specialty}}</h5>
+            <h3 class="card-title">{{doctor4.Name}}</h3>
+            <h5 class="card-text">{{doctor4.Specialty}}</h5>
             <p class="card-text">
-              {{doctor1.Address}}
+              {{doctor4.Address}}
             </p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../../../assets/images/doctor.jpg" class="card-img-top" alt="..." />
+          <img src="../../../assets/images/doctor5.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h3 class="card-title">{{doctor1.Name}}</h3>
-            <h5 class="card-text">{{doctor1.Specialty}}</h5>
+            <h3 class="card-title">{{doctor5.Name}}</h3>
+            <h5 class="card-text">{{doctor5.Specialty}}</h5>
             <p class="card-text">
-              {{doctor1.Address}}
+              {{doctor5.Address}}
             </p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../../../assets/images/doctor.jpg" class="card-img-top" alt="..." />
+          <img src="../../../assets/images/doctor6.jpeg" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h3 class="card-title">{{doctor1.Name}}</h3>
-            <h5 class="card-text">{{doctor1.Specialty}}</h5>
+            <h3 class="card-title">{{doctor6.Name}}</h3>
+            <h5 class="card-text">{{doctor6.Specialty}}</h5>
             <p class="card-text">
-              {{doctor1.Address}}
+              {{doctor6.Address}}
             </p>
           </div>
         </div>
       </div>
-    </div>
 
+      <app-spoti-button></app-spoti-button>
+    </div>
   </div>
