--- a/front/src/app/components/resources/resources.component.html
+++ b/front/src/app/components/resources/resources.component.html
@@ -12,15 +12,15 @@
       <div class="col-sm-12 col-md-6 col-lg-6">
         <div class="card">
           <img
-            src="../../../assets/images/shallPass.jpeg"
+            src="../../../assets/images/outliers.webp"
             alt="Book1"
             style="width: 100%"
           />
           <div class="container">
             <br />
-            <h2>{{ShallPass.Name}}</h2>
-            <h4>{{ShallPass.Author}}</h4>
-            <p>{{ShallPass.Bio}}</p>
+            <h2>{{Outliers.Name}}</h2>
+            <h4>{{Outliers.Author}}</h4>
+            <p>{{Outliers.Bio}}</p>
             <p>
               <a
                 href="https://www.amazon.com/-/es/dp/0241348862"
@@ -36,15 +36,15 @@
       <div class="col-sm-12 col-md-6 col-lg-6">
         <div class="card">
           <img
-            src="../../../assets/images/shallPass.jpeg"
+            src="../../../assets/images/weekHour.webp"
             alt="Book2"
             style="width: 100%"
           />
           <div class="container">
             <br />
-            <h2>{{ShallPass.Name}}</h2>
-            <h4>{{ShallPass.Author}}</h4>
-            <p>{{ShallPass.Bio}}</p>
+            <h2>{{WeekHour.Name}}</h2>
+            <h4>{{WeekHour.Author}}</h4>
+            <p>{{WeekHour.Bio}}</p>
             <p>
               <a
                 href="https://www.amazon.com/-/es/dp/0241348862"
@@ -60,15 +60,15 @@
       <div class="col-sm-12 col-md-6 col-lg-6">
         <div class="card">
           <img
-            src="../../../assets/images/shallPass.jpeg"
+            src="../../../assets/images/thinking.webp"
             alt="video2"
             style="width: 100%"
           />
           <div class="container">
             <br />
-            <h2>{{ShallPass.Name}}</h2>
-            <h4>{{ShallPass.Author}}</h4>
-            <p>{{ShallPass.Bio}}</p>
+            <h2>{{Thinking.Name}}</h2>
+            <h4>{{Thinking.Author}}</h4>
+            <p>{{Thinking.Bio}}</p>
             <p>
               <a
                 href="https://www.amazon.com/-/es/dp/0241348862"
@@ -84,15 +84,15 @@
       <div class="col-sm-12 col-md-6 col-lg-6">
         <div class="card">
           <img
-            src="../../../assets/images/shallPass.jpeg"
+            src="../../../assets/images/life.webp"
             alt="Book1"
             style="width: 100%"
           />
           <div class="container">
             <br />
-            <h2>{{ShallPass.Name}}</h2>
-            <h4>{{ShallPass.Author}}</h4>
-            <p>{{ShallPass.Bio}}</p>
+            <h2>{{Life.Name}}</h2>
+            <h4>{{Life.Author}}</h4>
+            <p>{{Life.Bio}}</p>
             <p>
               <a
                 href="https://www.amazon.com/-/es/dp/0241348862"
